--- a/public/sukimap/css/common.less
+++ b/public/sukimap/css/common.less
@@ -32,6 +32,18 @@ body {
         height: 300px;
         background: #787878;
     }
+
+    .footer {
+        margin-top: 40px;
+        padding: 5px;
+
+        #copyright {
+            margin-top: 20px;
+            font-size: 60%;
+            text-align: center;
+            color: #666;
+        }
+    }
 }
 
 /* 各ページ */
