--- a/public/sukimap/css/common.css
+++ b/public/sukimap/css/common.css
@@ -27,6 +27,16 @@ body #map-preview {
   height: 300px;
   background: #787878;
 }
+body .footer {
+  margin-top: 40px;
+  padding: 5px;
+}
+body .footer #copyright {
+  margin-top: 20px;
+  font-size: 60%;
+  text-align: center;
+  color: #666;
+}
 /* 各ページ */
 body#edit-page .faces img {
   width: 65px;
