--- a/public/sukimap/css/common.css
+++ b/public/sukimap/css/common.css
@@ -2,12 +2,17 @@ html,
 body {
   height: 100%;
 }
+/* 共通 */
 body {
   font-family: sans-serif;
+  font-size: 12px;
   margin: 0;
   padding: 0;
 }
-/* 共通 */
+body a,
+body a:visited {
+  color: #800;
+}
 body #wrapper {
   background: url('/sukimap/image/background.png');
 }
@@ -19,12 +24,15 @@ body #title img {
   width: 148px;
   height: 40px;
 }
+body img[src*="iws3.png"] {
+  display: none;
+}
 body #main-content {
   padding: 5px;
 }
 body #map-preview {
-  width: 100%;
-  height: 300px;
+  width: 310px;
+  height: 310px;
   background: #787878;
 }
 body .footer {
@@ -37,7 +45,30 @@ body .footer #copyright {
   text-align: center;
   color: #666;
 }
+body .message {
+  margin-top: 20px;
+  margin-bottom: 5px;
+}
+body .message img.flag {
+  margin-right: 4px;
+  width: 12px;
+  height: 18px;
+  vertical-align: middle;
+}
+body .image-button {
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
 /* 各ページ */
+body#main img.start-button {
+  width: 290px;
+  height: 56px;
+}
+body#edit-page .faces {
+  margin-left: 20px;
+  margin-bottom: 20px;
+}
 body#edit-page .faces img {
   width: 65px;
   height: 70px;
@@ -48,4 +79,18 @@ body#edit-page .faces input {
 }
 body#edit-page .faces input:checked + img {
   background: pink;
+}
+body#edit-page .message-container {
+  margin-bottom: 20px;
+}
+body#edit-page .message-container textarea {
+  margin: 4px;
+  width: 290px;
+  border: 2px solid pink;
+  border-radius: 2px;
+  padding: 5px;
+}
+body#edit-page img.ok-button {
+  width: 290px;
+  height: 56px;
 }
