--- a/public/sukimap/css/common.less
+++ b/public/sukimap/css/common.less
@@ -94,6 +94,11 @@ body {
             height: 20px;
         }
     }
+
+    .attension {
+        font-size: 90%;
+        font-weight: normal;
+    }
 }
 
 /* 各ページ */
