--- a/public/sukimap/css/common.less
+++ b/public/sukimap/css/common.less
@@ -209,6 +209,7 @@ body#suita-page {
     }
 
     .created-message {
+        display: none;
         margin-left: 10px;
         margin-bottom: 5px;
     }
