--- a/public/sukimap/css/common.css
+++ b/public/sukimap/css/common.css
@@ -174,6 +174,7 @@ body#suita-page .share .social-button {
   height: 56px;
 }
 body#suita-page .created-message {
+  display: none;
   margin-left: 10px;
   margin-bottom: 5px;
 }
