--- a/public/sukimap/css/common.css
+++ b/public/sukimap/css/common.css
@@ -289,5 +289,5 @@ body#suita-page .created-message {
   margin: 15px 15px 15px 0;
 }
 .api-message {
-  margin: 10px 0 0;
+  margin: 10px 15px 0;
 }
