--- a/public/kyotocamera/kyotocamera.less
+++ b/public/kyotocamera/kyotocamera.less
@@ -72,6 +72,10 @@
 #guide-page {
 
     .sample-item {
+        h3 {
+            font-size: 18px;
+            line-height: 25px;
+        }
         img {
             margin: 10px;
             width: 300px;
