--- a/public/kyotocamera/kyotocamera.less
+++ b/public/kyotocamera/kyotocamera.less
@@ -9,7 +9,7 @@
 #index-page {
 
     #kyotocamera-container {
-        width: 840px;
+        width: 700px;
         padding-top: 50px;
     }
 
@@ -84,4 +84,39 @@
             height: 300px;
         }
     }
+}
+
+
+
+/*
+    ColorBox Core Style:
+    The following CSS is consistent between example themes and should not be altered.
+*/
+#colorbox, #cboxOverlay, #cboxWrapper{position:absolute; top:0; left:0; z-index:9999; overflow:hidden;}
+#cboxOverlay{position:fixed; width:100%; height:100%;}
+#cboxMiddleLeft, #cboxBottomLeft{clear:left;}
+#cboxContent{position:relative;}
+#cboxLoadedContent{overflow:auto;}
+#cboxTitle{margin:0;}
+#cboxLoadingOverlay, #cboxLoadingGraphic{position:absolute; top:0; left:0; width:100%; height:100%;}
+#cboxPrevious, #cboxNext, #cboxClose, #cboxSlideshow{cursor:pointer;}
+.cboxPhoto{float:left; margin:auto; border:0; display:block; max-width:none;}
+.cboxIframe{width:100%; height:100%; display:block; border:0;}
+#colorbox, #cboxContent, #cboxLoadedContent{box-sizing:content-box; -moz-box-sizing:content-box; -webkit-box-sizing:content-box;}
+
+#cboxOverlay{
+    background:rgba(0,0,0,0.8);
+}
+
+#cboxContent{
+    background:#fff;
+    overflow:hidden;
+}
+
+#cboxCurrent,
+#cboxNext,
+#cboxPrevious,
+#cboxSlideshow,
+#cboxClose {
+    display: none !important;
 }
