--- a/public/kyotocamera/kyotocamera.less
+++ b/public/kyotocamera/kyotocamera.less
@@ -27,31 +27,15 @@
         }
     }
 
-    .screen-shot {
-        .iphone {
-            position: relative;
-            img.base {
-                width: 294px;
-                height: 592px;
-            }
-
-            img.display {
-                position: absolute;
-                left: 34px;
-                top: 88px;
-                width: 228px;
-                height: 406px;
-            }
-        }
-    }
-
     .description {
         p {
             margin-bottom: 2em;
+            line-height: 1.7em;
         }
     }
 
     .download-container {
+        text-align: center;
         img.download {
             width: 300px;
         }
