--- a/public/kyotocamera/kyotocamera.css
+++ b/public/kyotocamera/kyotocamera.css
@@ -18,22 +18,12 @@
   width: 96px;
   height: 96px;
 }
-#index-page .screen-shot .iphone {
-  position: relative;
-}
-#index-page .screen-shot .iphone img.base {
-  width: 294px;
-  height: 592px;
-}
-#index-page .screen-shot .iphone img.display {
-  position: absolute;
-  left: 34px;
-  top: 88px;
-  width: 228px;
-  height: 406px;
-}
 #index-page .description p {
   margin-bottom: 2em;
+  line-height: 1.7em;
+}
+#index-page .download-container {
+  text-align: center;
 }
 #index-page .download-container img.download {
   width: 300px;
