--- a/public/kyotocamera/kyotocamera.less
+++ b/public/kyotocamera/kyotocamera.less
@@ -37,7 +37,7 @@
     .download-container {
         text-align: center;
         img.download {
-            width: 300px;
+            width: 200px;
         }
     }
 
@@ -49,6 +49,12 @@
         img {
             width: 192px;
             height: 192px;
+        }
+    }
+
+    .social-buttons {
+        div,iframe {
+            vertical-align: middle !important;
         }
     }
 }
