--- a/public/kyotocamera/kyotocamera.css
+++ b/public/kyotocamera/kyotocamera.css
@@ -53,6 +53,10 @@
   width: 300px;
   height: 300px;
 }
+#map-page #map-container {
+  width: 100%;
+  height: 640px;
+}
 /*
     ColorBox Core Style:
     The following CSS is consistent between example themes and should not be altered.
