--- a/public/kyotocamera/kyotocamera.css
+++ b/public/kyotocamera/kyotocamera.css
@@ -4,43 +4,74 @@
 #copyright {
   text-align: center;
 }
-#index-page #kyotocamera-container {
-  width: 700px;
-  padding-top: 50px;
+#index-page {
+  font-size: 18px;
+  line-height: 1.7;
 }
-#index-page section {
-  margin-bottom: 30px;
+#index-page .header {
+  margin-top: 20px;
+  margin-bottom: 60px;
 }
-#index-page .title {
-  margin-bottom: 30px;
+#index-page .header .right {
+  margin-top: 30px;
 }
-#index-page .title h1 img.logo {
-  width: 96px;
-  height: 96px;
+#index-page .header .lead {
+  font-size: 24px;
 }
-#index-page .description p {
-  margin-bottom: 2em;
-  line-height: 1.7em;
+#index-page .main {
+  margin-bottom: 40px;
 }
-#index-page .download-container {
+#index-page .main .screenshot {
+  width: 80%;
+}
+#index-page .main .features {
+  margin-top: 40px;
+}
+#index-page .main .features .feature {
+  height: 200px;
+}
+#index-page .main .features .feature .image-container img.feature-image {
+  width: 100%;
+}
+#index-page .samples {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+#index-page .samples .photo-item {
   text-align: center;
 }
-#index-page .download-container img.download {
-  width: 200px;
+#index-page .samples .photo-item img {
+  width: 80%;
 }
-#index-page .photo-item {
-  display: inline-block;
-  width: 192px;
-  height: 192px;
-  margin: 5px;
+#index-page .download {
+  margin-bottom: 40px;
+  position: relative;
 }
-#index-page .photo-item img {
-  width: 192px;
-  height: 192px;
+#index-page .download img.available {
+  width: 100%;
+}
+#index-page .download .price {
+  margin-top: 20px;
+  font-size: 80%;
+}
+#index-page .social-buttons {
+  margin-bottom: 60px;
 }
 #index-page .social-buttons div,
 #index-page .social-buttons iframe {
   vertical-align: middle !important;
+}
+#index-page .copy {
+  font-size: 80%;
+}
+#index-page .copy a {
+  color: #333333;
+}
+#index-page .samples-container {
+  width: 100%;
+  min-width: 960px;
+  background: #808080;
+  margin-bottom: 60px;
 }
 #guide-page {
   margin: 10px;
