--- a/public/kyotocamera/kyotocamera.css
+++ b/public/kyotocamera/kyotocamera.css
@@ -22,7 +22,22 @@
   margin-bottom: 40px;
 }
 #index-page .main .screenshot {
-  width: 80%;
+  position: relative;
+}
+#index-page .main .screenshot .iphone-frame {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  z-index: 10;
+}
+#index-page .main .screenshot .screencast {
+  position: absolute;
+  left: 22px;
+  top: 98px;
+  width: 230px;
+  height: 380px;
+  background: #333;
+  z-index: 9;
 }
 #index-page .main .features {
   margin-top: 40px;
@@ -61,10 +76,10 @@
 #index-page .social-buttons iframe {
   vertical-align: middle !important;
 }
-#index-page .copy {
+#index-page .copyright {
   font-size: 80%;
 }
-#index-page .copy a {
+#index-page .copyright a {
   color: #333333;
 }
 #index-page .samples-container {
