--- a/public/kyotocamera/kyotocamera.less
+++ b/public/kyotocamera/kyotocamera.less
@@ -25,7 +25,24 @@
         margin-bottom: 40px;
 
         .screenshot {
-            width: 80%;
+            position: relative;
+
+            .iphone-frame {
+                position: absolute;
+                left: 0px;
+                top: 0px;
+                z-index: 10;
+            }
+
+            .screencast {
+                position: absolute;
+                left: 22px;
+                top: 98px;
+                width: 230px;
+                height: 380px;
+                background: #333;
+                z-index: 9;
+            }
         }
 
         .features {
@@ -73,7 +90,7 @@
         margin-bottom: 60px;
     }
 
-    .copy {
+    .copyright {
         font-size: 80%;
 
         a {
