--- a/public/kyotocamera/kyotocamera.less
+++ b/public/kyotocamera/kyotocamera.less
@@ -7,17 +7,51 @@
 }
 
 #index-page {
+    font-family: 'Helvetica Neue', 'Helvetica', 'Arial', 'ヒラギノ角ゴ Pro W3', 'Hiragino Kaku Gothic Pro', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
     font-size : 18px;
-    line-height: 1.7;
+    line-height: 1.3;
+
+    color: #737373;
+
+    p {
+        color: #737373;
+    }
+
+    h2 {
+        font-size: 28px;
+        margin-top: 0px;
+        margin-bottom: 5px;
+        font-weight: normal;
+        line-height: 1.0;
+        color: #333333;
+    }
+
+    .offset0-5 {
+        margin-left: 40px;
+    }
+
+    .span3-5 {
+        width: 280px;
+    }
+
+    .offset1-5 {
+        margin-left: 140px;
+    }
+
+    .span1-5 {
+        width: 140px;
+    }
+
+    .no-padding-left {
+        margin-left: 0px;
+    }
 
     .header {
         margin-top: 20px;
-        margin-bottom: 60px;
+        margin-bottom: 40px;
+
         .right {
-            margin-top: 30px;
-        }
-        .lead {
-            font-size: 24px;
+            margin-top: 13px;
         }
     }
 
@@ -48,11 +82,17 @@
         .features {
             margin-top: 40px;
             .feature {
-                height: 200px;
+                height: 180px;
                 .image-container {
+                    width: 96px;
+                    text-align: center;
                     img.feature-image {
-                        width: 100%;
+                        width: 80px;
                     }
+                }
+
+                p {
+                   line-height: 1.5;
                 }
             }
         }
@@ -64,7 +104,7 @@
         .photo-item {
             text-align: center;
             img {
-                width: 80%;
+                width: 90%;
             }
         }
     }
@@ -78,8 +118,8 @@
         }
 
         .price {
-            margin-top: 20px;
-            font-size: 80%;
+            font-size: 28px;
+            color: #737373;
         }
     }
 
@@ -94,14 +134,14 @@
         font-size: 80%;
 
         a {
-            color: #333333;
+            color: #737373;
         }
     }
 
     .samples-container {
         width: 100%;
         min-width: 960px;
-        background: #808080;
+        background: #e6e6e6;
         margin-bottom: 60px;
     }
 }
