--- a/public/kyotocamera/kyotocamera.less
+++ b/public/kyotocamera/kyotocamera.less
@@ -20,7 +20,7 @@
     h2 {
         font-size: 28px;
         margin-top: 0px;
-        margin-bottom: 5px;
+        margin-bottom: 13px;
         font-weight: normal;
         line-height: 1.0;
         color: #333333;
@@ -124,6 +124,7 @@
     }
 
     .social-buttons {
+        text-align: center;
         div,iframe {
             vertical-align: middle !important;
         }
