--- a/public/kasanegi/css/common.css
+++ b/public/kasanegi/css/common.css
@@ -310,7 +310,7 @@ select#city-selector {
 
 /* sorry */
 
-p.sorry {
+p.tips {
     margin-top: 20px;
     font-size: 80%;
     text-align: center;
