--- a/public/kasanegi/css/common.css
+++ b/public/kasanegi/css/common.css
@@ -304,10 +304,10 @@ p.tips {
     margin-left: 100px;
 }
 
-.authors img {
+/* .authors img {
     width: 24px;
     height: 24px;
-}
+} */
 
 .authors a {
     color: #333;
